2010-09-30  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>
	* DLD-FUNCTIONS/gcd.cc (divide): New function, complex integer
	division with remainder.
	(simple_gcd): Overload for complex values.
	(extended_gcd): Ditto.
	(do_simple_gcd): Dispatch for complex gcd.
	(do_extended_gcd): Ditto.
	(Fgcd): Mention that complex gcd is now also possible.

2010-09-30  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* DLD-FUNCTIONS/gcd.cc (extended_gcd): Fix bug that didn't
	distinguish the two output coefficients.
	(Fgcd): Fix off-by-one bug and typo from copy-pasted code.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* oct-parse.yy (Fautoload): Replace Octave_map by octave_map.
	* ov-fcn-handle.cc (Ffunctions): Replace Octave_map by 
	octave_scalar_map.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* help.cc (F__which__): Use octave_map instead of Octave_map.
	* load-save.cc (do_load, save_fields, save_vars): Use 
	octave_scalar_map instead of Octave_map.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* debug.cc (Fdbstatus, Fdbstack): Use octave_map instead of
	Octave_map.
	* error.cc (warning_options, initialize_warning_options,
	pr_where, Frethrow, Ferror, Fwarning, Flasterror): Use
	octave_scalar_map or octave_map instead of Octave_map.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* oct-errno.cc (octave_errno::list, octave_errno::do_list): Use
	octave_scalar_map instead of Octave_map.
	* oct-errno.h: Update decls.

2010-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* pt-idx.cc (tree_index_expression::make_arg_struct): Use octave_map
	instead of Octave_map.
	* pt-idx.h: Update decl.

2010-09-29  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.cc (octave_map::contents): Fix off-by-1 error.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (OCTAVE_GLPK_GET_REAL_PARAM,
	OCTAVE_GLPK_GET_INT_PARAM): Use GETFIELD to access map fields,
	not CONTENTS.
	* DLD-FUNCTIONS/amd.cc (Famd): Likewise.
	* DLD-FUNCTIONS/luinc.cc (Fluinc): Likewise.
